# Com-Backend

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  performance-test.jmx  pom.xml
.github/workflows/: build.yml
config/: config.yaml
proto/: furbbs.proto
scripts/: init_db.sql  upgrade_verification.sql
src/: main.cc
src/auth/: casdoor_auth.cc  casdoor_auth.h
src/common/: captcha_verifier.cc  captcha_verifier.h  content_filter.cc  content_filter.h  infrastructure.cc  infrastructure.h  netease_verify.cc  netease_verify.h  open_platform.cc  open_platform.h  result.h  security.cc  security.h
src/config/: config.cc  config.h
src/controller/: admin_controller.cc  advanced_controller.cc  base_controller.h  community_controller.cc  community_enhanced_controller.cc  core_controller.cc  customization_controller.cc  economy_controller.cc  enhanced_controller.cc  furry_core_controller.cc  message_controller.cc  post_controller.cc  security_controller.cc  shop_controller.cc  social_controller.cc  user_controller.cc  verification_controller.cc
src/db/: database.cc  database.h  sql_queries.h
src/main/java/com/furbbs/: Application.java
src/main/java/com/furbbs/config/: ApiKeyAuthFilter.java  DatabaseConfig.java  JwtAuthFilter.java  OAuth2Config.java  PermissionAuthFilter.java  RequirePermission.java  SAMLConfig.java  SecurityConfig.java  TRpcConfig.java
src/main/java/com/furbbs/controller/: ApiKeyController.java  AuthController.java  CategoryController.java  CommentController.java  IdpConfigController.java  MediaController.java  MessageController.java  NotificationController.java  PermissionController.java  PostController.java  PostInteractionController.java  PublicController.java  RoleController.java  StatisticsController.java  TagController.java
src/main/java/com/furbbs/model/: ApiKey.java  Category.java  Comment.java  IdpConfig.java  MediaFile.java  Message.java  Notification.java  Permission.java  Post.java  PostFavorite.java  PostLike.java  Role.java  RolePermission.java  Tag.java  User.java  UserRole.java
src/main/java/com/furbbs/repository/: ApiKeyRepository.java  CategoryRepository.java  CommentRepository.java  IdpConfigRepository.java  MediaFileRepository.java  MessageRepository.java  NotificationRepository.java  PermissionRepository.java  PostFavoriteRepository.java  PostLikeRepository.java  PostRepository.java  RolePermissionRepository.java  RoleRepository.java  TagRepository.java  UserRepository.java  UserRoleRepository.java
src/main/java/com/furbbs/service/: ApiKeyService.java  AuthService.java  CategoryService.java  CommentService.java  IdpConfigService.java  MediaService.java  (+9 more)
src/main/resources/: add_indexes.sql
src/middleware/: auth_interceptor.cc  auth_interceptor.h
src/repository/: admin_repository.cc  admin_repository.h  advanced_repository.cc  advanced_repository.h  base_repository.h  community_enhanced_repository.cc  community_enhanced_repository.h  community_repository.cc  community_repository.h  core_repository.cc  core_repository.h  customization_repository.cc  customization_repository.h  economy_repository.cc  economy_repository.h  enhanced_repository.cc  enhanced_repository.h  furry_core_repository.cc  furry_core_repository.h  message_repository.cc  message_repository.h  redeem_repository.cc  redeem_repository.h  security_repository.cc  security_repository.h  shop_repository.cc  shop_repository.h  social_repository.cc  social_repository.h  user_repository.cc  user_repository.h  verification_repository.cc  verification_repository.h
src/service/: furbbs_service.cc  furbbs_service.h
src/service_impl/: admin_service.cc  admin_service.h  advanced_service.cc  advanced_service.h  community_enhanced_service.h  community_service.h  core_service.h  customization_service.cc  customization_service.h  economy_service.h  enhanced_service.cc  enhanced_service.h  furry_core_service.h  message_service.cc  message_service.h  redeem_service.cc  redeem_service.h  security_service.h  shop_service.cc  shop_service.h  social_service.cc  social_service.h  user_service.cc  user_service.h  verification_service.cc  verification_service.h
(+20 files in other folders)
